--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,14 @@ scipy>=1.10,<2.0  # for reorder_labelmap.py (Hungarian assignment)
 pydantic>=1.10,<2.0
 python-multipart>=0.0.6,<1.0
 psutil>=5.9,<6.0
+packaging>=23.0,<25.0
+pyyaml>=6.0,<7.0
+json5>=0.9,<1.0
+omegaconf>=2.3,<3.0
+tiktoken>=0.6,<1.0
 ultralytics>=8.2,<9.0
 rfdetr>=0.1,<1.0
+xgboost>=2.0,<3.0
 
 # Torch (select the build matching your CUDA/CPU environment)
 torch
@@ -50,10 +56,10 @@ lightning>=2.4,<3.0
 nltk>=3.8,<4.0
 decord>=0.6,<1.0
 
-# Optional extras for advanced training
-# timm                # for DINOv2 encoders
-# opencv-python       # common image ops (not strictly required)
+# Optional extras for advanced training and tooling
+# opencv-python       # common image ops (required for tools/detect_missclassifications.py)
 # matplotlib          # plotting in notebooks/scripts
+# PyQt5               # required for tools/detect_missclassifications.py UI
 
 # Windowed detection helper
 sahi>=0.11,<0.12
